bugfix: returning empty list when there are no tags for a specific post